app/assets/stylesheets/themes/mintone/bootstrap.css
/*!
 * Bootstrap v4.0.0 (https://getbootstrap.com)
 * Copyright 2011-2018 The Bootstrap Authors
 * Copyright 2011-2018 Twitter, Inc.
 * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
 */:root {
  --blue:#02bec9;
  --purple:#b554f9;
  --pink:#ff484c;
  --red:#e95d5e;
  --orange:#fa7d03;
  --yellow:#ffc107;
  --green:#7ad835;
  --teal:#20c997;
  --cyan:#17a2b8;
  --white:#fff;
  --gray:#6c757d;
  --gray-dark:#67757c;
  --primary:#007bff;
  --secondary:#6c757d;
  --success:#7ad835;
  --info:#17a2b8;
  --warning:#ffc107;
  --danger:#dc3545;
  --light:#a3a3a3;
  --dark:#67757c;
  --breakpoint-xs:0;
  --breakpoint-sm:576px;
  --breakpoint-md:768px;
  --breakpoint-lg:992px;
  --breakpoint-xl:1200px;
  --font-family-sans-serif:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  --font-family-monospace:SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
}
*, ::after, ::before {
  box-sizing:border-box;
  outline:none;
}
html {
  position: relative; min-height: 100%; background: #f6f7fb;    -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;
  
  font-family:sans-serif;
  line-height:1.15;
}
@-ms-viewport {
  width:device-width
}
article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section {
  display:block
}
body {
  background: #f6f7fb;
  font-family: 'Work Sans', sans-serif;
  margin: 0;
  overflow-x: hidden;
  color: #222222;
  font-weight: 400;
  font-size: 14px;
  text-align:left;
}
[tabindex="-1"]:focus {
  outline:0!important
}
hr {
  box-sizing:content-box;
  height:0;
  overflow:visible
}
h1, h2, h3, h4, h5, h6 {
  margin-top:0;
  margin-bottom:.5rem
}
p {
  margin-top:0;
  margin-bottom:1rem
}
abbr[data-original-title], abbr[title] {
  text-decoration:underline;
  -webkit-text-decoration:underline dotted;
  text-decoration:underline dotted;
  cursor:help;
  border-bottom:0
}
address {
  margin-bottom:1rem;
  font-style:normal;
  line-height:inherit
}
dl, ol, ul {
  margin-top:0;
  margin-bottom:1rem
}
ol ol, ol ul, ul ol, ul ul {
  margin-bottom:0
}
dt {
  font-weight:700
}
dd {
  margin-bottom:.5rem;
  margin-left:0
}
blockquote {
  margin:0 0 1rem
}
dfn {
  font-style:italic
}
b, strong {
  font-weight:bolder
}
small {
  font-size:80%
}
sub, sup {
  position:relative;
  font-size:75%;
  line-height:0;
  vertical-align:baseline
}
sub {
  bottom:-.25em
}
sup {
  top:-.5em
}
a {
  color:#007bff;
  text-decoration:none;
  background-color:transparent;
  -webkit-text-decoration-skip:objects
}
a:hover {
  color:#0056b3;
  text-decoration:underline
}
a:not([href]):not([tabindex]) {
  color:inherit;
  text-decoration:none
}
a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
  color:inherit;
  text-decoration:none
}
a:not([href]):not([tabindex]):focus {
  outline:0
}
code, kbd, pre, samp {
  font-family:monospace, monospace;
  font-size:1em
}
pre {
  margin-top:0;
  margin-bottom:1rem;
  overflow:auto;
  -ms-overflow-style:scrollbar
}
figure {
  margin:0 0 1rem
}
img {
  vertical-align:middle;
  border-style:none
}
svg:not(:root) {
  overflow:hidden
}
table {
  border-collapse:collapse; width:100%;
}

caption {
  padding-top:.75rem;
  padding-bottom:.75rem;
  color:#6c757d;
  text-align:left;
  caption-side:bottom
}
th {
  text-align:inherit
}
label {
  display:inline-block;
  margin-bottom:.5rem
}
button {
  border-radius:0
}
button:focus {
  outline:1px dotted;
  outline:5px auto -webkit-focus-ring-color
}
button, input, optgroup, select, textarea {
  margin:0;
  font-family:inherit;
  font-size:inherit;
  line-height:inherit
}
button, input {
  overflow:visible
}
button, select {
  text-transform:none
}
[type=reset], [type=submit], button, html [type=button] {
  -webkit-appearance:button
}
[type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner, button::-moz-focus-inner {
  padding:0;
  border-style:none
}
input[type=checkbox], input[type=radio] {
  box-sizing:border-box;
  padding:0
}
input[type=date], input[type=datetime-local], input[type=month], input[type=time] {
  -webkit-appearance:listbox
}
textarea {
  overflow:auto;
  resize:vertical
}
fieldset {
  min-width:0;
  padding:0;
  margin:0;
  border:0
}
legend {
  display:block;
  width:100%;
  max-width:100%;
  padding:0;
  margin-bottom:.5rem;
  font-size:1.5rem;
  line-height:inherit;
  color:inherit;
  white-space:normal
}
progress {
  vertical-align:baseline
}
[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
  height:auto
}
[type=search] {
  outline-offset:-2px;
  -webkit-appearance:none
}
[type=search]::-webkit-search-cancel-button, [type=search]::-webkit-search-decoration {
  -webkit-appearance:none
}
::-webkit-file-upload-button {
  font:inherit;
  -webkit-appearance:button
}
output {
  display:inline-block
}
summary {
  display:list-item;
  cursor:pointer
}
template {
  display:none
}
[hidden] {
  display:none!important
}
.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
  margin-bottom:.5rem;
  font-family:inherit;
  font-weight:500;
  line-height:1.2;
  color:inherit
}
.h1, h1 {
  font-size:2.5rem
}
.h2, h2 {
  font-size:2rem
}
.h3, h3 {
  font-size:1.75rem
}
.h4, h4 {
  font-size:1.5rem
}
.h5, h5 {
  font-size:1.25rem
}
.h6, h6 {
  font-size:1rem
}
.lead {
  font-size:1.25rem;
  font-weight:300
}
.display-1 {
  font-size:6rem;
  font-weight:300;
  line-height:1.2
}
.display-2 {
  font-size:5.5rem;
  font-weight:300;
  line-height:1.2
}
.display-3 {
  font-size:4.5rem;
  font-weight:300;
  line-height:1.2
}
.display-4 {
  font-size:3.5rem;
  font-weight:300;
  line-height:1.2
}
hr {
  margin-top:1rem;
  margin-bottom:1rem;
  border:0;
  border-top:1px solid rgba(0, 0, 0, .1)
}
.small, small {
  font-size:80%;
  font-weight:400
}
.mark, mark {
  padding:.2em;
  background-color:#fcf8e3
}
/* ... */

